# django-staticpub

./: .coveragerc  .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  manage.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  test_urls.py  tox.ini
.github/workflows/: release.yml  test.yml
jackfrost/: actions.py  checks.py  models.py  test_actions.py  test_celery.py  test_command.py  test_receivers_eventlog.py  test_receivers_presave_postsave.py  test_urlreader.py  test_urlwriter.py
jackfrost/management/commands/: collectstaticsite.py
staticpub/: README.md  README.rst  __init__.py  actions.py  apps.py  checks.py  defaults.py  models.py  receivers.py  signals.py  tasks.py  test_actions.py  test_celery.py  test_checks.py  test_command.py  test_modelrenderer.py  test_receivers_eventlog.py  test_receivers_presave_postsave.py  test_urlcollector.py  test_urlcollector_feed.py  test_urlcollector_medusa.py  test_urlcollector_sitemap.py  test_urlreader.py  test_urlwriter.py
staticpub/management/commands/: README.md  collectstaticsite.py
test_templates/: README.md
